Fixed sidebar overflow

--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -5,8 +5,10 @@
   display: flex;
   flex-flow: column;
   gap: 16px;
+  overflow-x: hidden;
+  overflow-y: auto;
   
-  height: 100%;
+  // height: 100%;
   padding: 8px 24px;
   // background-color: lighten($primary-button-bg, 15%);
   background-color: $secondary-button-bg;
